<resources>
    <string name="app_name">Habitizer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="card_front_text">Card Front Text</string>
    <string name="_35">35</string>
    <string name="end_routine">End Routine</string>
    <string name="example_routine">Example Routine</string>
    <string name="of">of</string>
    <string name="_40">40</string>
    <string name="_60">60</string>
    <string name="add">Add</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="_45">40</string>
    <string name="new_name">New Name...</string>
    <string name="pause_routine">Pause Routine</string>
    <string name="resume_routine">Resume Routine</string>
    <string name="slash">/</string>
    <string name="bar">|</string>
</resources>