<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="VisualLintButtonSize,VisualLintBounds">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ConstraintLayout0"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/purple_200"
        app:layout_constraintBottom_toTopOf="@+id/ConstraintLayout1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/routine_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:background="@color/purple_200"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_back"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck,
                          TouchTargetSizeCheck,ImageContrastCheck"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ConstraintLayout1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/routine_updating_timer"
            android:layout_width="72dp"
            android:layout_height="45dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="12dp"
            android:gravity="center"
            android:text="@string/_45"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/of_text" />

        <TextView
            android:id="@+id/of_text"
            android:layout_width="37dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:gravity="center"
            android:text="@string/of"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/routine_total_time" />

        <TextView
            android:id="@+id/routine_total_time"
            android:layout_width="71dp"
            android:layout_height="44dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:text="@string/_60"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/routine_pause_time_button" />

        <Button
            android:id="@+id/routine_total_time_button"
            android:layout_width="60dp"
            android:layout_height="0dp"
            android:alpha="0"
            app:layout_constraintBottom_toBottomOf="@+id/routine_total_time"
            app:layout_constraintEnd_toEndOf="@+id/routine_total_time"
            app:layout_constraintStart_toEndOf="@+id/of_text"
            app:layout_constraintTop_toTopOf="@+id/routine_total_time" />

        <Button
            android:id="@+id/routine_pause_time_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/pause"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/routine_add_30_sec_button" />

        <Button
            android:id="@+id/routine_add_30_sec_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/add"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <ListView
        android:id="@+id/task_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/ConstraintLayout1"
        app:layout_constraintBottom_toTopOf="@+id/pause_routine_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:listitem="@layout/list_item_task" />

    <Button
        android:id="@+id/pause_routine_button"
        android:layout_width="270dp"
        android:layout_height="53dp"
        android:layout_marginBottom="16dp"
        android:text="@string/pause_routine"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/end_routine_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <Button
        android:id="@+id/end_routine_button"
        android:layout_width="270dp"
        android:layout_height="53dp"
        android:layout_marginBottom="16dp"
        android:text="@string/end_routine"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
